--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ build-iPhoneSimulator/
 /config/master.key
 /config/database.yml
 /log/*
-
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+/public/uploads/*
