--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,9 @@ quantity_per_page: 5
 per_page: 10
 limit_home: 3
 limit_post_home: 1
+time_expired: 2
+size_picture: 5
+limit_picture: [400, 400]
+min_content_length: 255
+max_title_length: 255
+max_sumary_length: 255
