--- a/config/settings.yml
+++ b/config/settings.yml
@@ -12,5 +12,4 @@ limit_picture: [400, 400]
 min_content_length: 255
 max_title_length: 255
 max_sumary_length: 255
-status_on: 1
-status_off: 0
+max_service_name: 100
