--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,8 @@
 max_name_lenght: 50
 min_pass_lenght: 6
 max_email_lenght: 255
+phone_lenght: 10
+max_address_lenght: 255
 size_gravatar: 60
 quantity_per_page: 5
 per_page: 10
@@ -13,3 +15,4 @@ min_content_length: 255
 max_title_length: 255
 max_sumary_length: 255
 max_service_name: 100
+display_text: 160
